[gd_scene load_steps=8 format=2]

[ext_resource path="res://Newspaper.gd" type="Script" id=1]
[ext_resource path="res://K Gothic.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 36
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 28
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 22
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Newspaper" type="Node2D"]
script = ExtResource( 1 )

[node name="Title" type="RichTextLabel" parent="."]
margin_left = 153.0
margin_top = 93.252
margin_right = 878.0
margin_bottom = 157.252
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "THE POLLOCKTICAL TIMES"
text = "THE POLLOCKTICAL TIMES"
scroll_active = false

[node name="MainHeadline" type="RichTextLabel" parent="."]
margin_left = 151.0
margin_top = 196.0
margin_right = 621.0
margin_bottom = 277.0
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Cold War Casts Shadows Over Future of Mankind"
text = "Cold War Casts Shadows Over Future of Mankind"
scroll_active = false

[node name="LowerHeadline" type="RichTextLabel" parent="."]
margin_left = 155.0
margin_top = 382.0
margin_right = 623.0
margin_bottom = 478.0
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Ghandi Begins Hunger Strike, Emptying Stomach for Weeks The Brown Fox Jumped"
text = "Ghandi Begins Hunger Strike, Emptying Stomach for Weeks The Brown Fox Jumped"
scroll_active = false

[node name="SideHeadline" type="RichTextLabel" parent="."]
margin_left = 661.615
margin_top = 195.5
margin_right = 859.615
margin_bottom = 421.5
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Jackie Robinson Colors The World of Baseball The Brown Fox Jumped Over"
text = "Jackie Robinson Colors The World of Baseball The Brown Fox Jumped Over"
scroll_active = false

[node name="Date" type="RichTextLabel" parent="."]
margin_left = 767.239
margin_top = 582.375
margin_right = 900.239
margin_bottom = 616.375
custom_fonts/normal_font = SubResource( 6 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "Sept 1947"
text = "Sept 1947"
scroll_active = false
